# python-indexer-template

./: .gitignore  README.md  configuration.toml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
src/indexer/: indexer.py  main.py
